# sessionark

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: test.yml
docs/: ARCHITECTURE.md  DEMAND_RESEARCH.md
docs/logs/: 2026-07-10-github-publish.md  2026-07-10-initial-build.md
examples/: backup-codex.ps1
src/sessionark/: __init__.py  adapters.py  audit.py  cli.py  models.py  render.py  repair.py  sqlite_safe.py  util.py  vault.py
tests/: helpers.py  test_audit.py  test_cli.py  test_repair.py  test_util.py  test_vault.py
